2005-03-17 Eric Sandall <eric@sandall.us>
	* latest.defaults: Latest PRE_2_6 is 2.6.11.4
	* info/patches/PRE_2_6/patch-2.6.11.4, info/kernels/2.6.11.4: Added

2005-03-13 David Brown <dmlb2000@excite.com>
	* latest.defaults updated latest to patch-2.6.11.3
	* info/patches/PRE_2_6/patch-2.6.11.3 added
	* info/patches/PRE_2_6/patch-2.6.11-rc1 deleted
	* info/kernels/2.6.11.3 added
	* info/updatepatch now anyone can use it read comments in file to see
	  what it does

2005-03-12 David Brown <dmlb2000@excite.com>
	* latest.defaults updated latest to patch-2.6.10-as7
	* info/patches/as_patches/patch-2.6.10-as7 added

2005-03-12 David Brown <dmlb2000@excite.com>
	* latest.defaults updated latest to grsecurity-2.1.3-2.6.11-200503111604.patch
	* info/patches/grsecurity_2_6/grsecurity-2.1.3-2.6.11-200503111604.patch added

2005-03-12 David Brown <dmlb2000@excite.com>
	* latest.defaults updated latest to 2.6.11-mm3
	* info/patches/mm_patches/2.6.11-mm3 added
	* info/patches/mm_patches/2.6.10-rc3-mm1 deleted

2005-03-11 David Brown <dmlb2000@excite.com>
	* latest.defaults updated latest to patch-2.6.11-cko2
	* info/patches/cko_patches/patch-2.6.11-cko2 added

2005-03-11 David Brown <dmlb2000@excite.com>
	* info/patches/ac_patches/.info added
	* info/patches/ac_patches/* edit to include the .info file
	* CONFIGURE edit to remove the stop for sorcery rebuild
	* PRE_BUILD printed off the linux-source-directory for debugging

2005-03-10 Ladislav Hagara <hgr@vabo.cz>
	* info/kernels/2.6.11.2: fixed md5sum

2005-03-09 David Brown <dmlb2000@excite.com>
	* latest.defaults updated latest to 2.6.11-mm2
	* info/patches/mm_patches/2.6.11-mm2 added
	* info/patches/mm_patches/2.6.10-rc2-mm4 deleted

2005-03-09 David Brown <dmlb2000@excite.com>
	* latest.defaults updated latest to patch-2.6.11-ac2
	* info/patches/ac_patches/patch-2.6.11-ac2 added
	* info/patches/ac_patches/patch-2.6.9-ac14 deleted

2005-03-09 David Brown <dmlb2000@excite.com>