@@ -1,0 +1,2 @@
+short="Add a splash image to your linux framebuffer"
+help="This patch adds splash image support to your linux framebuffer and is available from http://www.bootsplash.de/"
