@@ -1,0 +1,3 @@
+source="bootsplash-3.0.7-2.4.29.diff"
+source_url=http://www.bootsplash.de/files/old/$source
+appliedkernels="2.4.29"
