@@ -1,0 +1,2 @@
+short="Gentoo replacement for bootsplash"
+help="Bootsplash with more code moved to userspace from http://dev.gentoo.org/~spock/projects/gensplash/current/"
