@@ -1,0 +1,3 @@
+source="fbsplash-0.9.2-2.6.11.patch"
+source_url=http://dev.gentoo.org/~spock/projects/gensplash/current/$source
+appliedkernels="2.6.11 2.6.11.1 2.6.11.2 2.6.11.3 2.6.11.4"
