@@ -7,6 +7,8 @@ LATEST_PRE_2_2=patch-2.2.27-pre2
 LATEST_2_0=2.0.40
 LATEST_mm_patches=2.6.11-mm3
 LATEST_ac_patches=patch-2.6.11-ac2
+LATEST_bootsplash_patches=bootsplash-3.1.4-2.6.11.diff
+LATEST_gensplash_patches=fbsplash-0.9.2-2.6.11.patch
 LATEST_grsecurity_2_4=grsecurity-2.1.0-2.4.28-200501051112.patch
 LATEST_grsec_secfix_2_4=linux-2.4.28-secfix-200501071141.patch
 LATEST_grsecurity_2_6=grsecurity-2.1.3-2.6.11-200503111604.patch
