@@ -1,6 +1,11 @@
 2005-03-17 Eric Sandall <eric@sandall.us>
 	* latest.defaults: Latest PRE_2_6 is 2.6.11.4
+	  Added gensplash_patches and bootsplash_patches
 	* info/patches/PRE_2_6/patch-2.6.11.4, info/kernels/2.6.11.4: Added
+	* info/patches/fbsplash_patches/fbsplash-0.9.2-2.6.11.patch,
+	  info/patches/fbsplash_patches/.info: Added
+	* info/patches/bootsplash/.info, bootsplash-3.0.7-2.4.29.diff: Added
+	* Renamed info/patches/fbsplash_patches to info/patches/gensplash_patches
 
 2005-03-13 David Brown <dmlb2000@excite.com>
 	* latest.defaults updated latest to patch-2.6.11.3
